--- a/app/src/main/res/layout/activity_section_c_form2.xml
+++ b/app/src/main/res/layout/activity_section_c_form2.xml
@@ -241,7 +241,7 @@
                                 android:text="@string/no" />
 
                             <RadioButton
-                                android:id="@+id/kf2c08c"
+                                android:id="@+id/kf2c0898"
                                 style="@style/i_radiobutton"
                                 android:text="@string/dkn" />
                         </RadioGroup>
@@ -318,7 +318,7 @@
                                 android:text="@string/no" />
 
                             <RadioButton
-                                android:id="@+id/kf2c10c"
+                                android:id="@+id/kf2c1098"
                                 style="@style/i_radiobutton"
                                 android:text="@string/dkn" />
                         </RadioGroup>
